<resources>
    <string name="app_name">Document Scanner</string>
    <string name="action_about">Thông tin</string>
    <string name="action_exit">Thoát</string>
    <string name="about_content">Môn: Quản lý dự án phần mềm\nNhóm: 10\nHọ tên: Nguyễn Văn Bình\nMSSV: 1412049\n\nPhần mềm hỗ trợ quét tài liệu từ hình ảnh chụp từ camera hoặc từ hình ảnh có sẵn trong thư viện ảnh. Phần mềm sẽ tự động nhận dạng vùng tài liệu, trong một số trường hợp không tự nhận dạng được thì có thể điều chỉnh bằng tay. Sau khi quét tài liệu xong, cho phép lưu ảnh ra file pdf và mở bằng ứng dụng đọc pdf có sẵn trong máy.</string>
    <string name="ok_got_it">Ok, got it</string>
    <string name="note_description">* This message will not display anymore when you pressed Ok button</string>
    <string name="app_require_permissions">Permission required</string>
    <string name="access_external_storage">Access External Storage</string>
    <string name="access_camera">Access Camera</string>
    <string name="storage_permission_description">Scanner requires storage permission to run correctly. Just accept the dialog that appears in next screen.</string>
    <string name="camera_permisison_description">Allow Scanner access camera to take photos. Just accept the dialog that appear in next screen.</string>
    <string name="permission_description">Scanner requires permission to run correctly. Please accept following dialogs that appear in next screen.</string>
    <string name="about">Licenses &amp; About</string>
    <string name="your_documents">Your documents</string>
    <string name="open_pdf_error">Unable to open pdf file</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_gallery_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_slideshow_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="allow_access">Allow Access</string>
    <string name="looking_for_document">Looking for document…</string>
    <string name="hold_still">Hold still…</string>
    <string name="capturing">Capturing…</string>
    <string name="retake">Retake</string>
    <string name="take_more">Take more</string>
    <string name="keep_scan">Keep Scan</string>
    <string name="continue_">Continue</string>
    <string name="crop_document">Crop Document</string>
    <string name="cropper">Cropper</string>
    <string name="import_x">Import (%1$d)</string>
    <string name="manual">Manual Mode</string>
    <string name="auto_capture">Auto Capture</string>
    <string name="add_x">Add (%1$d)</string>
    <string name="page_x_of_n">Page %1$d of %2$d</string>
    <string name="cancel">Cancel</string>
    <string name="done">Save file</string>
    <string name="applying_filter">Applying filter...</string>
    <string name="loading">Loading</string>
    <string name="edit">Edit</string>
    <string name="open">Open</string>
    <string name="icons_by_icons8">Icons By Icons8</string>
    <string name="icons8_com">icons8.com</string>
    <string name="built_on_top_of">Be built on top of</string>
    <string name="normal">normal</string>
    <string name="dangerous_divider" translatable="false">dangerous_divider</string>
    <string name="focus_divider" translatable="false">focus</string>
    <string name="warning_divider">warning_divider</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="invalid_section">Invalid Section</string>
    <string name="preferences">Preferences</string>
    <string name="app_theme">App Theme</string>
    <string name="app_theme_note">*Changing the app theme requires application restarting</string>
    <string name="follow_system">Follow System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="save">Save</string>
    <string name="edit_documents">Edit Documents</string>
    <string name="rotate_note">Rotate document</string>
    <string name="add_pages">Add pages</string>
    <string name="rotate">Rotate</string>
    <string name="filter">Filter</string>
    <string name="option">Options</string>
    <string name="ratio_aspect">Ratio aspect</string>
    <string name="rearrange">Rearrange</string>
    <string name="original">Original</string>
    <string name="magic_color">Magic Color</string>
    <string name="gray_scale">Gray Scale</string>
    <string name="b_and_w">B and W</string>
    <string name="original_description">Original image</string>
    <string name="magic_color_description">Apply the magic color filter</string>
    <string name="gray_scale_description">Apply gray scale filter</string>
    <string name="b_and_w_description">Apply Black White Filter</string>
    <string name="rotate_right_description">Rotate 90 degrees clockwise</string>
</resources>
