<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?backColor">
    <View
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_below="@id/status_bar"
        android:layout_margin="4dp">
        <Button
            android:id="@+id/original"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_photo_black_24dp"
            android:singleLine="true"
            android:text="@string/original"
            android:textSize="14sp"
            android:textAllCaps="false"

            android:textColor="?light_is_000" />

        <Button
            android:id="@+id/magicColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_photo_filter_black_24dp"
            android:singleLine="true"
            android:text="@string/magic_color"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:textColor="?light_is_000"  />

        <Button
            android:id="@+id/grayMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_color_lens_black_24dp"
            android:singleLine="true"
            android:text="@string/gray_scale"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:textColor="?light_is_000"  />

        <Button
            android:id="@+id/BWMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_wb_auto_black_24dp"
            android:singleLine="true"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:text="@string/b_and_w"
            android:textColor="?light_is_000" />
    </LinearLayout>
    <View
        android:id="@+id/divider_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/topBar"
        android:background="?divider_color"/>
    <View
        android:id="@+id/divider_bot"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?divider_color"
        android:layout_above="@id/botBar"/>
    <LinearLayout
        android:id="@+id/botBar"
        android:layout_above="@id/l01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/rotateLeftButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:singleLine="true"
            android:drawableTop="@drawable/ic_rotate_left_black_24dp"
            android:text="Rotate Left"

            android:textSize="14sp"
            android:textAllCaps="false"
            android:textColor="?light_is_000"  />

        <Button
            android:id="@+id/rotateRightButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:singleLine="true"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:drawableTop="@drawable/ic_rotate_right_black_24dp"
            android:text="Rotate Right"
            android:textColor="?light_is_000"  />

        <Button
            android:id="@+id/rotate360Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:singleLine="true"
            android:drawableTop="@drawable/ic_refresh_black_24dp"
            android:text="Rotate 180"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:textColor="?light_is_000"  />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
        <TextView
            android:id="@+id/doneButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/bottom_bar_padding"
            android:text="@string/done"
            android:textColor="?light_is_000"
            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:background="@drawable/background_circle"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"/>
        <TextView
            android:id="@+id/cancelButton2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/bottom_bar_padding"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:background="@drawable/background_circle"
            android:textColor="?light_is_000"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
           />
    </LinearLayout>
        <com.github.chrisbanes.photoview.PhotoView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scannedImage"
            android:layout_above="@id/botBar"
            android:layout_below="@id/topBar"
            android:scaleType="centerInside"
            android:layout_gravity="center"/>
</RelativeLayout>