<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="0dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:background="@android:color/black"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:clickable="true"
    android:focusable="true"
    tools:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:id="@+id/permission_image"
        android:layout_width="85dp"
        android:layout_height="85dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/camera"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/permission_title"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="0dp"/>
    <TextView
        android:id="@+id/permission_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/permission_image"
        app:layout_constraintBottom_toTopOf="@id/permission_description"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/app_require_permissions"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textSize="22sp"
        android:fontFamily="@font/helvetica_font"
        android:textColor="@android:color/white"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"/>
    <TextView
        android:id="@+id/permission_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/permission_title"
        app:layout_constraintBottom_toTopOf="@id/button_two"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/camera_permisison_description"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"/>
    <TextView
        android:id="@+id/button_two"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:paddingEnd="48dp"
        android:text="@string/allow_access"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:background="@drawable/background_invisible_then_border_on_pressed_reverse"
        app:layout_constraintTop_toBottomOf="@id/permission_description"
        app:layout_constraintBottom_toTopOf="@id/note_description"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/helvetica_font"
        android:textStyle="bold"
        android:gravity="center" />
    <TextView
        android:id="@+id/note_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        android:textStyle="italic"
        android:visibility="gone"
        android:text="@string/note_description"
        app:layout_constraintTop_toBottomOf="@id/button_two"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="14dp"
        android:textSize="12sp"
        android:textColor="#66FFFFFF"
        android:paddingStart="22dp"
        android:paddingEnd="12dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>