<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    app:cardElevation="3dp"
    app:cardCornerRadius="16dp"
    android:clickable="true"
    tools:layout_marginTop="32dp"
    android:focusable="true"
    app:cardBackgroundColor="?backColor"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:background="@android:color/transparent"
        android:background="?backColor">
        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/helvetica_font"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?light_is_000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/close"/>
        <ImageView
            android:id="@+id/close"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/close"
            android:tint="?light_is_000"
            android:focusable="true"
            android:clickable="true"
            android:padding="32dp"/>
        <ImageView
            android:id="@+id/permission_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/view_file"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/permission_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/permission_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/app_require_permissions"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:fontFamily="@font/helvetica_font"
            android:textColor="?lightIsDarkFocus"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"/>
        <TextView
            android:id="@+id/permission_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/permission_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/storage_permission_description"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="?light_is_000"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>
        <TextView
            android:id="@+id/button_two"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="30dp"
            android:text="@string/ok_got_it"
            android:textColor="?lightIsDarkFocus"
            android:textSize="16sp"
            android:background="@drawable/background_invisible_then_border_on_pressed"
            app:layout_constraintTop_toBottomOf="@id/permission_description"
            app:layout_constraintBottom_toBottomOf="@id/note_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/helvetica_font"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:id="@+id/note_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="18dp"
            android:textStyle="italic"
            android:visibility="gone"
            android:text="@string/note_description"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="14dp"
            android:textSize="12sp"
            android:textColor="#66FFFFFF"
            android:paddingStart="22dp"
            android:paddingEnd="12dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>