<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?backColor"
    android:clickable="true"
    android:focusable="true">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:context="com.tdh7.documentscanner.ui.fragments.AboutFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingBottom="64dp">
            <View
                android:id="@+id/app_theme_section"
                android:layout_width="0dp"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/app_theme"
                android:layout_width="0dp"
                android:layout_height="35dp"
                app:layout_constraintTop_toTopOf="@id/app_theme_section"
                app:layout_constraintBottom_toTopOf="@id/app_theme_note"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/app_theme_button"
                android:text="@string/app_theme"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:layout_marginStart="32dp"
                android:textSize="19sp"
                android:paddingStart="4dp"
                android:layout_marginEnd="16dp"
                android:textColor="?light_is_000"
                android:fontFamily="@font/helvetica_font"

                />

            <TextView
                android:id="@+id/app_theme_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/app_theme"
                app:layout_constraintBottom_toBottomOf="@id/app_theme_section"
                app:layout_constraintStart_toStartOf="@id/app_theme"
                app:layout_constraintEnd_toEndOf="@id/app_theme"
                android:text="@string/app_theme_note"
                android:gravity="center_vertical"
                android:textSize="10sp"
                android:textStyle="italic"
                android:paddingStart="4dp"
                android:textColor="?light_is_111"
                />
            <TextView
                android:id="@+id/app_theme_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Follow system"
                android:textColor="@color/flatOrange"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@drawable/background_choosing_button"
                app:layout_constraintTop_toTopOf="@id/app_theme"
                app:layout_constraintBottom_toBottomOf="@id/app_theme_note"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <ImageView
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_24dp"
        android:tint="?app_bar_icon_tint"
        android:padding="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_button"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        android:text="@string/preferences"
        android:fontFamily="@font/helvetica_font"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="?scanned_document_color"/>
    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?divider_color"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>

