<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusable="true"
>
    <ImageView
        android:id="@+id/app_icon"
        android:layout_height="50dp"
        android:layout_width="50dp"
        app:layout_constraintTop_toTopOf="@id/app_title"
        app:layout_constraintBottom_toBottomOf="@id/app_title"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/scan_stock_96"
        android:paddingTop="10dp"
        android:tint="@color/scanner_theme_color"
        android:paddingBottom="10dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toStartOf="@id/app_title"
        app:layout_constraintHorizontal_chainStyle="packed"
        />
    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/helvetica_font"
        android:textSize="18sp"
        android:textColor="?scanned_document_color"
        android:text="Scanner"
        android:textStyle="bold"
        android:paddingTop="4dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@id/app_icon"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="26dp"
        android:gravity="center"
        />
    <View
        android:id="@+id/header_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/app_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:background="#22666666"/>
    <View
        android:id="@+id/section_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/your_document_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="128dp"
        android:background="#22666666"/>
    <View
        android:id="@+id/your_document_section"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/your_document_icon"
        app:layout_constraintBottom_toBottomOf="@id/your_document_icon"
        android:background="@drawable/background_focus_navigation_section"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"/>
    <ImageView
        android:id="@+id/your_document_icon"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintDimensionRatio="1:1"
        app:srcCompat="@drawable/ic_folder_open_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/header_divider"
        android:padding="16dp"
        android:tint="?app_bar_icon_tint"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/your_document_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/your_document_icon"
        app:layout_constraintBottom_toBottomOf="@id/your_document_icon"
        app:layout_constraintStart_toEndOf="@id/your_document_icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:textColor="?app_bar_icon_tint"
        android:textStyle="bold"
        android:textSize="14sp"
        android:paddingStart="8dp"
        android:text="@string/your_documents"
        android:gravity="center_vertical"
        />
    <View
        android:id="@+id/pref_section"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/pref_icon"
        app:layout_constraintBottom_toBottomOf="@id/pref_icon"
        android:background="@drawable/background_not_focus_navigation_section"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="4dp"/>
    <ImageView
        android:id="@+id/pref_icon"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintDimensionRatio="1:1"
        app:srcCompat="@drawable/ic_settings_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/section_divider"
        android:padding="15dp"
        android:tint="?app_bar_icon_tint"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/pref_icon"
        app:layout_constraintBottom_toBottomOf="@id/pref_icon"
        app:layout_constraintStart_toEndOf="@id/pref_icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:textColor="?app_bar_icon_tint"
        android:textStyle="bold"
        android:textSize="14sp"
        android:paddingStart="8dp"
        android:text="@string/preferences"
        android:gravity="center_vertical"
        />
    <View
        android:id="@+id/about_section"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/about_icon"
        app:layout_constraintBottom_toBottomOf="@id/about_icon"
        android:background="@drawable/background_not_focus_navigation_section"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="4dp"/>
    <ImageView
        android:id="@+id/about_icon"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintDimensionRatio="1:1"
        app:srcCompat="@drawable/ic_info_outline_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/pref_icon"
        android:padding="15dp"
        android:layout_marginTop="4dp"
        android:tint="?app_bar_icon_tint"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/about_icon"
        app:layout_constraintBottom_toBottomOf="@id/about_icon"
        app:layout_constraintStart_toEndOf="@id/about_icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:textColor="?app_bar_icon_tint"
        android:textStyle="bold"
        android:textSize="14sp"
        android:paddingStart="8dp"
        android:text="@string/about"
        android:gravity="center_vertical"
        />
    <include
        app:layout_constraintBottom_toBottomOf="parent"
        layout="@layout/preview_flag_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>